
Version 3.01  2011-07-24
 * bug fixed: tracker_get_connection_ex and tracker_get_connection_r_ex 
   connect two times with multi tracker servers
 * bug fixed: tracker_mem_check_add_tracker_servers condition not correct
 * all logError add source filename and line

Version 3.00  2011-06-19
 * mass small files optimization
 * add fixed block memory pool: common/fast_mblock.c
 * bug fixed: tracker_mem.c do NOT clear g_groups fields
 * bug fixed: slave file and appender file download ok
 * bug fixed: tracker / storage run by group / user, set file owner
 * tracker server support leader
 * client support static library
 * client_func.h add functions fdfs_tracker_group_equals and 
   fdfs_get_file_ext_name
 * bug fixed: test/dfs_func_pc.c compile ok
 * storage server check free space enough when upload a file

Version 2.09  2011-02-19
 * bug fixed: write_to_binlog_index then increase g_binlog_index (feedback 
   by koolcoy)
 * disk read / write supports direct mode (avoid caching by the file system)

Version 2.08  2011-01-30
 * bug fixed: fdfs_trackerd.c set g_tracker_thread_count to 0
 * add cmd TRACKER_PROTO_CMD_SERVER_LIST_ONE_GROUP to support list one group
 * support disk recovery automatically
 * support total_upload_bytes, success_upload_bytes, total_download_bytes and 
   success_download_bytes etc. 18 stat fields
 * tracker data file storage_groups.dat changes to storage_groups_new.dat, and 
   storage_servers.dat changes to storage_servers_new.dat
 * support file append, add tests: fdfs_appender_test and fdfs_appender_test1
 * storage_dio.c: dio_deal_task split to several functions
 * tracker http check thread exit normally
 * function fdfs_get_file_info_ex changed, add function fdfs_get_file_info_ex1
 * fix some type cast error when compile with c++
 * client add tools: fdfs_upload_appender and fdfs_append_file

Version 2.07  2011-01-09
 * slave file's prefix name can be empty
 * FDFS_MAX_GROUPS change from 64 to 512